{
  "version": 4,
  "terraform_version": "1.5.1",
  "serial": 221,
  "lineage": "e160e755-0b71-3265-1810-1532b8664935",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08dc51de8fc8f2166",
            "domain": "vpc",
            "id": "eipalloc-08dc51de8fc8f2166",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-3-12-234-120.us-east-2.compute.amazonaws.com",
            "public_ip": "3.12.234.120",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "dev-nat-gw",
              "Owner": "Ranjeet JADHAV",
              "Project": "Terraform"
            },
            "tags_all": {
              "Name": "dev-nat-gw",
              "Owner": "Ranjeet JADHAV",
              "Project": "Terraform"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "sbi",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:888887582627:internet-gateway/igw-0fdd68bbb70d6ddf3",
            "id": "igw-0fdd68bbb70d6ddf3",
            "owner_id": "888887582627",
            "tags": {
              "Name": "dev-igw",
              "Owner": "Ranjeet JADHAV",
              "Project": "Terraform"
            },
            "tags_all": {
              "Name": "dev-igw",
              "Owner": "Ranjeet JADHAV",
              "Project": "Terraform"
            },
            "vpc_id": "vpc-085226667b7d7e1f3"
          },
          "dependencies": [
            "aws_vpc.sbi"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08dc51de8fc8f2166",
            "association_id": "eipassoc-01c15ade4acbe160b",
            "connectivity_type": "public",
            "id": "nat-0f2df6b9ee2955bf8",
            "network_interface_id": "eni-045c602c08d379a35",
            "private_ip": "10.0.1.33",
            "public_ip": "3.12.234.120",
            "subnet_id": "subnet-02f907f85650bc601",
            "tags": {
              "Name": "dev-nat-gw",
              "Owner": "Ranjeet JADHAV",
              "Project": "Terraform"
            },
            "tags_all": {
              "Name": "dev-nat-gw",
              "Owner": "Ranjeet JADHAV",
              "Project": "Terraform"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.public_subnets",
            "aws_vpc.sbi",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:888887582627:route-table/rtb-0c864351628832423",
            "id": "rtb-0c864351628832423",
            "owner_id": "888887582627",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0f2df6b9ee2955bf8",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-route-private-subnet",
              "Owner": "Ranjeet JADHAV",
              "Project": "Terraform"
            },
            "tags_all": {
              "Name": "dev-route-private-subnet",
              "Owner": "Ranjeet JADHAV",
              "Project": "Terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-085226667b7d7e1f3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_subnet.public_subnets",
            "aws_vpc.sbi",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:888887582627:route-table/rtb-00dab2a5fbf61016b",
            "id": "rtb-00dab2a5fbf61016b",
            "owner_id": "888887582627",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0fdd68bbb70d6ddf3",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-route-public-subnets",
              "Owner": "Ranjeet JADHAV",
              "Project": "Terraform"
            },
            "tags_all": {
              "Name": "dev-route-public-subnets",
              "Owner": "Ranjeet JADHAV",
              "Project": "Terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-085226667b7d7e1f3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.sbi",
            "aws_vpc.sbi"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_routes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d3bafa5a98de9c7d",
            "route_table_id": "rtb-0c864351628832423",
            "subnet_id": "subnet-0a492422ac6fa0aff"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_route_table.private_subnets",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.sbi",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-017ffcf6c30e4a899",
            "route_table_id": "rtb-0c864351628832423",
            "subnet_id": "subnet-0e59ba65ce1b6bb62"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_route_table.private_subnets",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.sbi",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_routes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0eea2e080c80fb00f",
            "route_table_id": "rtb-00dab2a5fbf61016b",
            "subnet_id": "subnet-02f907f85650bc601"
          },
          "dependencies": [
            "aws_internet_gateway.sbi",
            "aws_route_table.public_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.sbi",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09900289b3fa4f966",
            "route_table_id": "rtb-00dab2a5fbf61016b",
            "subnet_id": "subnet-002cef85059bd7934"
          },
          "dependencies": [
            "aws_internet_gateway.sbi",
            "aws_route_table.public_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.sbi",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:888887582627:subnet/subnet-0a492422ac6fa0aff",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a492422ac6fa0aff",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "888887582627",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-private-1",
              "Owner": "Ranjeet JADHAV",
              "Project": "Terraform"
            },
            "tags_all": {
              "Name": "dev-private-1",
              "Owner": "Ranjeet JADHAV",
              "Project": "Terraform"
            },
            "vpc_id": "vpc-085226667b7d7e1f3"
          },
          "dependencies": [
            "aws_vpc.sbi",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:888887582627:subnet/subnet-0e59ba65ce1b6bb62",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.22.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e59ba65ce1b6bb62",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "888887582627",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-private-2",
              "Owner": "Ranjeet JADHAV",
              "Project": "Terraform"
            },
            "tags_all": {
              "Name": "dev-private-2",
              "Owner": "Ranjeet JADHAV",
              "Project": "Terraform"
            },
            "vpc_id": "vpc-085226667b7d7e1f3"
          },
          "dependencies": [
            "aws_vpc.sbi",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:888887582627:subnet/subnet-02f907f85650bc601",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02f907f85650bc601",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "888887582627",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-public-1",
              "Owner": "Ranjeet JADHAV",
              "Project": "Terraform"
            },
            "tags_all": {
              "Name": "dev-public-1",
              "Owner": "Ranjeet JADHAV",
              "Project": "Terraform"
            },
            "vpc_id": "vpc-085226667b7d7e1f3"
          },
          "dependencies": [
            "aws_vpc.sbi",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:888887582627:subnet/subnet-002cef85059bd7934",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-002cef85059bd7934",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "888887582627",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-public-2",
              "Owner": "Ranjeet JADHAV",
              "Project": "Terraform"
            },
            "tags_all": {
              "Name": "dev-public-2",
              "Owner": "Ranjeet JADHAV",
              "Project": "Terraform"
            },
            "vpc_id": "vpc-085226667b7d7e1f3"
          },
          "dependencies": [
            "aws_vpc.sbi",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "sbi",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:888887582627:vpc/vpc-085226667b7d7e1f3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02a135d3cb2994dce",
            "default_route_table_id": "rtb-00e5b8c9c310ec353",
            "default_security_group_id": "sg-04bc9769ea895c3f9",
            "dhcp_options_id": "dopt-0b11c1bb00d172176",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-085226667b7d7e1f3",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00e5b8c9c310ec353",
            "owner_id": "888887582627",
            "tags": {
              "Name": "dev-vpc",
              "Owner": "Ranjeet JADHAV",
              "Project": "Terraform"
            },
            "tags_all": {
              "Name": "dev-vpc",
              "Owner": "Ranjeet JADHAV",
              "Project": "Terraform"
            }
          }
        }
      ]
    }
  ]
}